--- a/video.html
+++ b/video.html
@@ -81,17 +81,17 @@
                 </form> -->
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="nav-color" href="#about-me">
+                        <a class="nav-color" href="index.html">
                             <strong>ABOUT</strong>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-color" href="#portfolio">
+                        <a class="nav-color" href="index.html">
                             <strong>PORTFOLIO</strong>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-color" href="#contact">
+                        <a class="nav-color" href="index.html">
                             <strong>CONTACT</strong>
                         </a>
                     </li>
