--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
             <div class="col-xs-12 col-md-3">
                 <img src="assets/images/videop2.png" alt="video-production">
-                <a class="port-nav" href="#">Video Production</a>
+                <a class="port-nav" href="video.html">Video Production</a>
             </div>
 
             <div class="col-xs-12 col-md-3">
@@ -255,7 +255,7 @@
             </div>
 
 
-            
+
         </div>
     </div>
 
