all new changes since animations

--- a/video.html
+++ b/video.html
@@ -15,6 +15,8 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/stylebs.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700i,800,900" rel="stylesheet">
+    <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 </head>
 
 <body>
@@ -30,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <span class="myname nav-color">
                         <strong>My Portfolio</strong>
                     </span>
@@ -117,7 +119,7 @@
     <div class="fluid-container mainpic">
         <div class="row about">
 
-            <div class="col-md-12">
+            <div class="col-md-12 animated zoomIn">
                 <h4>VIDEO PRODUCTION</h4>
 
             </div>
@@ -131,7 +133,7 @@
                 <div class="col-md-12 video-col">
                     <div class="your-centered-div">
                         <h5>Demo Reel</h5>
-                        <iframe class="center-block" width="560" height="315" src="https://www.youtube.com/embed/ViUO7BNmcr0?rel=0&amp;showinfo=0"
+                        <iframe class="center-block animated fadeIn" width="560" height="315" src="https://www.youtube.com/embed/ViUO7BNmcr0?rel=0&amp;showinfo=0"
                             frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     </div>
                 </div>
