--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/stylebs.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700i,800,900" rel="stylesheet">
+    <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 </head>
 
 <body>
@@ -23,7 +25,7 @@
         <div class="container-fluid blue-bckd2" id="wholenav">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+                <button type="button" class="navbar-toggle collapsed hamburger" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
                     aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -116,18 +118,18 @@
 
             <div class="row">
 
-                <div class="col-md-4">
+                <div class="col-md-4 animated flipInY">
                     <img src="assets/images/d_profilepic_alph_final3_250.png" class="img-responsive img-rounded profilepic" alt="Responsive image">
 
 
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 headingText">
                     <div class="dorian">
-                        <h1 class="maintext">DORIAN CRAWFORD
+                        <h1 class="maintext animated zoomIn">DORIAN CRAWFORD
                     </div>
                     <br>
                     </h1>
-                    <h3 class="subtext1">Web Developer | UX/UI Designer | Video Producer</h3>
+                    <h3 class="subtext1 animated zoomIn">Web Developer | UX/UI Designer | Video Producer</h3>
                 </div>
 
 
@@ -143,8 +145,8 @@
         <div class="container" id="about-me">
             <div class="row about">
                 <div class="col-md-12 about-col">
-                    <h2 class="about-me-text">ABOUT ME</h2>
-                    <p class="about-text">I'm an all around great guy thats looking for a new home. An expert level video producer studying to
+                    <h2 class="about-me-text animated flipInY">ABOUT ME</h2>
+                    <p class="about-text animated fadeInUp">I'm an all around great guy thats looking for a new home. An expert level video producer studying to
                         become the world's best web developer, I'm excited to see what the future holds. Don't be shy, let's
                         connect!
                     </p>
@@ -156,7 +158,7 @@
 
     <div class="fluid-container blue-bckd">
         <div class="row about">
-            <div class="col-md-12" id="portfolio">
+            <div class="col-md-12 animated flipInY" id="portfolio">
                 <div>
                     <h2 class="portfolio-text">PORTFOLIO</h2>
                 </div>
@@ -166,26 +168,28 @@
     </div>
 
     <div class="fluid-container portfoliopics blue-bckd">
-        <div class="row">
-            <div class="col-xs-12 col-md-3">
-                <img src="assets/images/webd2.png" alt="web-development">
+        <div class="row allPics">
+            <div class="col-xs-12 col-md-3 text-center animated zoomInDown">
+                <img src="assets/images/webd2.png" alt="web-development" class="center-block portCircle">
                 <a class="port-nav" href="#">Web Development</a>
 
             </div>
+            
 
-            <div class="col-xs-12 col-md-3">
-                <img src="assets/images/uxui2.png" alt="UIUX-design">
+            <div class="col-xs-12 col-md-3 text-center animated zoomInDown delay1">
+                <img src="assets/images/uxui2.png" alt="UIUX-design" class="center-block portCircle">
                 <a class="port-nav" href="#">UX | UI Design</a>
 
             </div>
 
-            <div class="col-xs-12 col-md-3">
-                <img src="assets/images/videop2.png" alt="video-production">
-                <a class="port-nav" href="video.html">Video Production</a>
+            <div class="col-xs-12 col-md-3 text-center animated zoomInDown delay2">
+                    <a class="port-nav" href="video.html">
+                <img src="assets/images/videop2.png" alt="video-production" class="center-block portCircle">
+                <a class="port-nav" href="video.html">Video Production</a></a>
             </div>
 
-            <div class="col-xs-12 col-md-3">
-                <img src="assets/images/projm2.png" alt="project-management">
+            <div class="col-xs-12 col-md-3 text-center animated zoomInDown delay3">
+                <img src="assets/images/projm2.png" alt="project-management" class="center-block portCircle">
                 <a class="port-nav" href="#">Project Management</a>
 
             </div>
@@ -197,7 +201,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-12" id="contact">
+            <div class="col-md-12 animated flipInY" id="contact">
                 <div>
                     <h2>CONTACT ME</h2>
                 </div>
@@ -207,7 +211,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 animated fadeInUp">
                 <h3>Keep In Touch</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus at ullam, nisi inventore ad illo
                     excepturi sint eum dolore aperiam, amet tempore. Molestias doloribus numquam reiciendis, facere dicta
@@ -220,8 +224,8 @@
         <div class="row">
             <div class="col-md-12">
 
-                <form class="contact-form">
-                    <div class="form-group">
+                <form class="contact-form animated fadeInUp">
+                    <div class="form-group ">
                         <label for="exampleInputEmail1">Name</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
                     </div>
