--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
         crossorigin="anonymous">
 
     <title>My Portfolio</title>
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="assets/css/stylebs.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700i,800,900" rel="stylesheet">
-    <link rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    <nav class="navbar navbar-default">
+
+
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid blue-bckd2" id="wholenav">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -82,6 +81,7 @@
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form> -->
                 <ul class="nav navbar-nav navbar-right">
+
                     <li>
                         <a class="nav-color" href="#about-me">
                             <strong>ABOUT</strong>
@@ -113,22 +113,23 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <div class="fluid-container mainpic">
+    
         <div class="container mainpic">
 
             <div class="row">
 
                 <div class="col-md-4 animated flipInY">
-                    <img src="assets/images/d_profilepic_alph_final3_250.png" class="img-responsive img-rounded profilepic" alt="Responsive image">
+                    <!-- <img src="assets/images/d_profilepic_alph_final3_2502.png" class="img-responsive img-rounded profilepic" alt="Responsive image"> -->
 
 
                 </div>
-                <div class="col-md-8 headingText">
+                <div class="col-md-12 headingText">
                     <div class="dorian">
-                        <h1 class="maintext animated zoomIn">DORIAN CRAWFORD
+                        <!-- <h1 class="maintext animated zoomIn">DORIAN CRAWFORD</h1> -->
+                        <img src="assets/images/nameBadgeAE2.png" class="img-responsive img-rounded profilepic" id="effectPic" alt="Responsive image">
                     </div>
                     <br>
-                    </h1>
+
                     <h3 class="subtext1 animated zoomIn">Web Developer | UX/UI Designer | Video Producer</h3>
                 </div>
 
@@ -137,158 +138,201 @@
             </div>
         </div>
 
+        <div class="fluid-container">
+            <div class="container">
+                <div class="row aboutTitle">
+
+                    <div class="col-md-12 about-col3">
+                        <h2 class="about-me-text animated flipInY">ABOUT ME</h2>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+        <div class="fluid-container">
+            <div class="container" id="about-me">
+                <div class="row about">
+                    <div class="col-xs-12 col-sm-12 col-md-2 about-col2 animated flipInY">
+                        <img src="assets/images/d_profilepic_alph_final3_2503.png" class="img-responsive img-rounded profilepic " alt="Responsive image">
+                    </div>
 
 
-    </div>
 
-    <div class="fluid-container">
-        <div class="container" id="about-me">
+                    <div class="col-xs-12 col-sm-12 col-md-10 about-col">
+                        <!-- <h2 class="about-me-text animated flipInY">ABOUT ME</h2> -->
+                        <p class="about-text animated fadeInUp">Hi I'm Dorian an all around great guy thats looking for a new home. I'm an experienced, Motion Graphics
+                            artist, UX/UI Designer and Video Editor with a strong creative eye and a true passion for technical
+                            artistry. I'm excited to see what the future holds. Don't be shy, let's connect!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="container blue-bckd">
             <div class="row about">
-                <div class="col-md-12 about-col">
-                    <h2 class="about-me-text animated flipInY">ABOUT ME</h2>
-                    <p class="about-text animated fadeInUp">I'm an all around great guy thats looking for a new home. An expert level video producer studying to
-                        become the world's best web developer, I'm excited to see what the future holds. Don't be shy, let's
-                        connect!
-                    </p>
+                <div class="col-md-12 animated flipInY" id="portfolio">
+                    <div>
+                        <h2 class="portfolio-text">PORTFOLIO</h2>
+                    </div>
                 </div>
             </div>
+
         </div>
-    </div>
 
+        <div class="container portfoliopics blue-bckd">
+            <div class="row allPics">
+                <div class="col-xs-12 col-sm-6 col-md-3 text-center animated zoomInDown">
+                    <img src="assets/images/webd2.png" alt="web-development" class="center-block portCircle">
+                    <a class="port-nav" href="#">Web Development</a>
 
-    <div class="fluid-container blue-bckd">
-        <div class="row about">
-            <div class="col-md-12 animated flipInY" id="portfolio">
-                <div>
-                    <h2 class="portfolio-text">PORTFOLIO</h2>
                 </div>
-            </div>
-        </div>
 
-    </div>
 
-    <div class="fluid-container portfoliopics blue-bckd">
-        <div class="row allPics">
-            <div class="col-xs-12 col-md-3 text-center animated zoomInDown">
-                <img src="assets/images/webd2.png" alt="web-development" class="center-block portCircle">
-                <a class="port-nav" href="#">Web Development</a>
+                <div class="col-xs-12 col-sm-6 col-md-3 text-center animated zoomInDown delay1">
+                    <img src="assets/images/uxui2.png" alt="UIUX-design" class="center-block portCircle">
+                    <a class="port-nav" href="#">UX | UI Design</a>
 
-            </div>
-            
+                </div>
 
-            <div class="col-xs-12 col-md-3 text-center animated zoomInDown delay1">
-                <img src="assets/images/uxui2.png" alt="UIUX-design" class="center-block portCircle">
-                <a class="port-nav" href="#">UX | UI Design</a>
-
-            </div>
-
-            <div class="col-xs-12 col-md-3 text-center animated zoomInDown delay2">
+                <div class="col-xs-12 col-sm-6 col-md-3 text-center animated zoomInDown delay2">
                     <a class="port-nav" href="video.html">
-                <img src="assets/images/videop2.png" alt="video-production" class="center-block portCircle">
-                <a class="port-nav" href="video.html">Video Production</a></a>
-            </div>
+                        <img src="assets/images/videop2.png" alt="video-production" class="center-block portCircle">
+                        <a class="port-nav" href="video.html">Video Production</a>
+                    </a>
+                </div>
 
-            <div class="col-xs-12 col-md-3 text-center animated zoomInDown delay3">
-                <img src="assets/images/projm2.png" alt="project-management" class="center-block portCircle">
-                <a class="port-nav" href="#">Project Management</a>
+                <div class="col-xs-12 col-sm-6 col-md-3 text-center animated zoomInDown delay3">
+                    <img src="assets/images/projm2.png" alt="project-management" class="center-block portCircle">
+                    <a class="port-nav" href="#">Project Management</a>
+
+                </div>
 
             </div>
 
         </div>
 
-    </div>
-
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 animated flipInY" id="contact">
-                <div>
-                    <h2>CONTACT ME</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 contactArea" id="contact">
+                    <div>
+                        <h2 class="animated flipInY">MOTION GRAPHICS | VIDEO PRODUCTION</h2>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 animated fadeInUp">
-                <h3>Keep In Touch</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus at ullam, nisi inventore ad illo
-                    excepturi sint eum dolore aperiam, amet tempore. Molestias doloribus numquam reiciendis, facere dicta
-                    ad ipsum.</p>
+
+
+        <div id="carouselExampleControls" class="carousel slide container contactArea" data-ride="carousel" id="videoCar">
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <img class="d-block img-fluid center-block vids" src="http://placekitten.com/560/315" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid center-block vids" src="http://placekitten.com/560/315" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid center-block vids" src="http://placekitten.com/560/315" alt="Third slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <!-- <div class="fluid-container">
+        <div class="container video-con">
+            <div class="row video-row">
+
+                <div class="col-md-12 video-col">
+                    <div class="your-centered-div">
+                        <h5>Demo Reel</h5>
+                        <iframe class="center-block animated fadeIn" width="560" height="315" src="https://www.youtube.com/embed/ViUO7BNmcr0?rel=0&amp;showinfo=0"
+                            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
 
-                <form class="contact-form animated fadeInUp">
-                    <div class="form-group ">
-                        <label for="exampleInputEmail1">Name</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 animated flipInY" id="contact">
+                    <div>
+                        <h2>CONTACT ME</h2>
                     </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Email address</label>
-                        <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Phone Number</label>
-                        <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Phone Number">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Message</label>
-                        <input type="text" class="form-control" id="message-input" placeholder="Message">
-                    </div>
-
-                    <div class="checkbox">
-
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="fluid-container footer">
-        <div class="row about">
-            <div class="col-md-12">
-
-                <h2>SPACE</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 animated fadeInUp">
+                    <h3>Keep In Touch</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus at ullam, nisi inventore ad
+                        illo excepturi sint eum dolore aperiam, amet tempore. Molestias doloribus numquam reiciendis, facere
+                        dicta ad ipsum.</p>
+                </div>
             </div>
-
-
-
         </div>
-    </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+
+                    <form class="contact-form animated fadeInUp">
+                        <div class="form-group ">
+                            <label for="exampleInputEmail1">Name</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Email address</label>
+                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Email">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Phone Number</label>
+                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Phone Number">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Message</label>
+                            <input type="text" class="form-control" id="message-input" placeholder="Message">
+                        </div>
+
+                        <div class="checkbox">
+
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="fluid-container footer">
+            <div class="row about">
+                <div class="col-md-12">
+
+                    <h2>SPACE</h2>
+                </div>
 
 
 
+            </div>
+        </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
